@@ -1,4 +1,7 @@
-Revision history for File-Collector
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+  - document that Collector classes need "use Role::Tiny;"
 
 0.033     2019-09-08 12:27:04-04:00 America/New_York
   - fix regex bug with interpolated variable
